--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
-	"arrowParens": "always",
+	"arrowParens": "avoid",
 	"bracketSameLine": true,
-	"bracketSpacing": false,
+	"bracketSpacing": true,
 	"semi": true,
 	"singleQuote": true,
 	"jsxSingleQuote": true,
