--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"nodemon": "^3.0.1",
 		"prettier": "3.0.1",
 		"typescript": "^5.1.6"
 	}
